--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "marl sass",
+  "name": "marlmarl.github.io",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -27,42 +27,6 @@
   },
   "imports": [
     {
-      "path": "vendor/font-awesome/less/font-awesome.less",
-      "imports": [
-        "vendor/font-awesome/less/variables.less",
-        "vendor/font-awesome/less/mixins.less",
-        "vendor/font-awesome/less/path.less",
-        "vendor/font-awesome/less/core.less",
-        "vendor/font-awesome/less/larger.less",
-        "vendor/font-awesome/less/fixed-width.less",
-        "vendor/font-awesome/less/list.less",
-        "vendor/font-awesome/less/bordered-pulled.less",
-        "vendor/font-awesome/less/animated.less",
-        "vendor/font-awesome/less/rotated-flipped.less",
-        "vendor/font-awesome/less/stacked.less",
-        "vendor/font-awesome/less/icons.less",
-        "vendor/font-awesome/less/screen-reader.less"
-      ]
-    },
-    {
-      "path": "vendor/font-awesome/scss/font-awesome.scss",
-      "imports": [
-        "vendor/font-awesome/scss/_variables.scss",
-        "vendor/font-awesome/scss/_mixins.scss",
-        "vendor/font-awesome/scss/_path.scss",
-        "vendor/font-awesome/scss/_core.scss",
-        "vendor/font-awesome/scss/_larger.scss",
-        "vendor/font-awesome/scss/_fixed-width.scss",
-        "vendor/font-awesome/scss/_list.scss",
-        "vendor/font-awesome/scss/_bordered-pulled.scss",
-        "vendor/font-awesome/scss/_animated.scss",
-        "vendor/font-awesome/scss/_rotated-flipped.scss",
-        "vendor/font-awesome/scss/_stacked.scss",
-        "vendor/font-awesome/scss/_icons.scss",
-        "vendor/font-awesome/scss/_screen-reader.scss"
-      ]
-    },
-    {
       "path": "sass/styles.scss",
       "imports": [
         "sass/helpers/_variables.scss",
@@ -84,7 +48,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -193,7 +157,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"compiler-node-sass\":{\"outputStyle\":\"expanded\"}}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"compiler-node-sass\":{\"outputStyle\":\"expanded\"},\"compiler-minify-css\":{\"enabled\":true}}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
