cleaning about section JS mess

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,6 +31,7 @@
       "imports": [
         "sass/helpers/_variables.scss",
         "sass/helpers/_placeholders.scss",
+        "sass/helpers/_animation-placeholders.scss",
         "sass/base/_reset.scss",
         "sass/base/_basics.scss",
         "sass/base/_elements.scss",
